tests/fail/static-variable-with-vanext/source.lart
include "types";

var x: i32 = vanext<i32>;
